# Bomberman

./: CMakeLists.txt  README.md
include/: NonCopyable.hpp  irrlicht.hpp
old_sources/: Bomberman.cpp  Bomberman.hpp  ExampleEntity.cpp  ExampleEntity.hpp  Exception.hpp  IrrlichtDevice.cpp  IrrlichtDevice.hpp  Vector3D.hpp  main.cpp  main2.cpp
old_sources/Components/: Animation.hpp  BombCapacity.cpp  BombCapacity.hpp  BombTimer.cpp  BombTimer.hpp  Collision.cpp  Collision.hpp  Hp.cpp  Hp.hpp  IA.cpp  IA.hpp  IsDisplayed.cpp  IsDisplayed.hpp  Mesh.hpp  Movable.cpp  Movable.hpp  Nickname.cpp  Nickname.hpp  Position.cpp  Position.hpp  Radius.cpp  Radius.hpp  Rotation.cpp  Rotation.hpp  Score.cpp  Score.hpp  Speed.cpp  Speed.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  WallPass.cpp  WallPass.hpp
old_sources/ECS/: Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  System.cpp  System.hpp  World.cpp  World.hpp
old_sources/Entities/: Bomb.hpp  Box.hpp  NPC.hpp  Player.hpp  Wall.hpp
old_sources/Generation/: MapGenerator.cpp  MapGenerator.hpp  PerlinNoise.hpp
old_sources/Systems/: ExampleSystem.cpp  ExampleSystem.hpp  IsColliding.cpp  IsColliding.hpp  Move.hpp  Rotate.h  UpdateBomb.cpp  UpdateBomb.hpp  UpdateScore.cpp  UpdateScore.hpp
sources/: AssetManager.cpp  AssetManager.hpp  Bomberman.cpp  Bomberman.hpp  IrrlichtDevice.cpp  IrrlichtDevice.hpp  Menu.cpp  Menu.hpp  MyEventReceiver.cpp  MyEventReceiver.hpp  SplashScreen.cpp  SplashScreen.hpp  Vector3D.hpp  main.cpp
sources/Game/: Bomb.cpp  Bomb.hpp  Cube.cpp  Cube.hpp  Model.cpp  (+5 more)
(+33 files in other folders)
